# AutoDefense

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  supply-chain.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py  settings.py
backend/app/agents/: artifact.py  behavior.py  coordinator.py  forensics.py  kernel.py  policy.py  sentinel.py
backend/app/api/: router.py  sealed.py
backend/app/api/routes/: alerts.py  analyze.py  config.py  events.py  kernel.py  metrics.py  scan.py
backend/app/core/: config_store.py  crypto.py  event_bus.py  logging.py  models.py  redis_client.py  regex_safety.py  response_engine.py  risk.py  rules_store.py  sealed.py  self_heal.py  text.py  ws_auth.py
backend/app/policies/: default_policy.json
backend/app/services/: pipeline.py
backend/tests/: conftest.py  crypto_helpers.py  test_analyze.py  test_attack_vectors.py  test_auth.py  test_config.py  test_crypto.py  test_host_scanners.py  test_kernel.py  test_rate_limit_and_proxy.py  test_routes_and_middleware.py  test_run_ci_local.py  test_scan.py  test_sealed_transport.py  test_selfheal_forensics.py  test_startup_crypto.py
docs/: CI_LOCAL.md  api.md  architecture.md  configuration.md  deployment.md  scanners.md  security.md  setup.md
docs/maintainers/: github-repository-setup.md
frontend/: .env.example  .npmrc  Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/: AnalyzePanel.tsx  ArtifactScanner.tsx  ConfigPanel.tsx  ConnectionCredentials.tsx  ErrorBoundary.tsx  EventFeed.tsx  KernelHealth.tsx  RiskChart.tsx  SignalList.tsx  StatCard.tsx  SystemHealthPanel.tsx
frontend/src/lib/: actionTone.ts  api.test.ts  api.ts  decisions.test.ts  decisions.ts  encoding.ts  platform.ts  useEventStream.ts
frontend/src/pages/: App.tsx
kernel/: Dockerfile  scanner.py
macos/: scanner.py
scanners/: finding.py
scripts/: configure-github-ruleset-main.sh  precheck.sh  publish-pr.sh  run_ci_local.py  start.ps1  start.sh  sync_vite_lock.py
simulations/: Dockerfile  attacks.http  run_simulations.py
windows/: scanner.py
