[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-defense-backend"
version = "0.1.0"
description = "Autonomous AI Defense System backend (FastAPI + agents + Redis event bus)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "AutoDefense contributors" }]
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "redis>=7.0.0",
  "python-dotenv>=1.0.1",
  "cryptography>=44.0.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "httpx>=0.28.0",
  "fakeredis>=2.35.0",
  "ruff>=0.15.0",
]

[tool.ruff]
line-length = 100
